@@ -1,4 +1,6 @@
 v0.5
+(r1253) Fix incorrectly encoded cyrillic texts in the non-Russion versions when loading them from the data files.
+(r1252) Add a workaround for the broken swprintf() implementation of FreeBSD for printing characters which cannot be represented by the current LC_CTYPE.
 (r1251) Improve the Russian translation.
 (r1238) Remove the black box around the text in the help window by marking the text surface as transparent.
 (r1234) Fix loading of tactical maps for the Russian Gold version.
